Sun Aug  7 22:51:45 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/openssl/ossl_asn1.c (decode_eoc): remove unused variables.
	  Patch by Eric Wong. [Feature #5157] [ruby-core:38798]
	* ext/openssl/ossl_asn1.c (ossl_asn1_decode): ditto.
	* ext/openssl/ossl_pkey.c (ossl_pkey_new_from_data): ditto.

Sun Aug  7 22:37:08 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: add -Wunused-variable to default CFLAGS.
	  Patch by Eric Wong. [Feature #5157] [ruby-core:38798]

Sun Aug  7 15:37:35 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/digest/sha2/sha2ossl.c: use original SHA384_Final on DragonFly.

Sun Aug  7 14:08:16 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/objspace/objspace.c: fix typos in a document.

Sun Aug  7 07:14:57 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (HAVE_GETCONTEXT): see getcontext(3) because DragonFly BSD
	  x64 port doesn't have it.

Sun Aug  7 00:42:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/tk/lib/tk/wm.rb (Tk::Wm.command): Add the missing receiver
	  before calling epath. patched by flori
	  https://github.com/flori/ruby/commit/aa9474d32e5f2c57f8b0e2e0c528a03f06a4d433

Sat Aug  6 07:06:34 2011  Eric Hodel  <drbrain@segment7.net>

	* marshal.c (w_object):  Fix exception message when _dump_data is not
	  defined on a T_DATA object.

Fri Aug  5 22:16:20 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* numeric.c (rb_infinity, rb_nan): use WORDS_BIGENDIAN to get endian.
	  fix [Bug #5160] [ruby-dev:44356]

Fri Aug  5 17:14:11 2011  Akinori MUSHA  <knu@iDaemons.org>

	* test/test_syslog.rb (TestSyslog#test_log): Do not be too
	  specific about the log line format.  Fixes #5081.

Fri Aug  5 15:57:10 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* complex.c (f_signbit): fix compile error in gcc4 on Solaris with
	  CFLAGS="-std=gnu99".  [ruby-dev:44355] fix [Bug #5159]

	* math.c: ditto.

Fri Aug  5 15:55:33 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
